# vange-rs

./: .gitignore  .travis.yml  CNAME  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  gen.py  makefile  rustfmt.toml
.github/workflows/: check.yml  continuous-integration.yml  deploy-web.yml  release.yml
config/: settings-linux-3rdperson.ron  settings-macos-1stperson.ron  settings-macos-topdown.ron  settings-windows-voxel.ron  settings.template.ron  settings.template.toml  settings.toml
data/shader/: body.inc.glsl  collision.glsl  color.inc.glsl  debug.frag  debug.glsl  debug.vert  debug_shape.glsl  downsample.glsl  e_copy.glsl  e_force.glsl  e_pulse.glsl  e_reset.glsl  e_step.glsl  encode.inc.glsl  globals.inc.glsl  object.frag  object.glsl  object.vert  quat.inc.glsl  quat.vert  shape.inc.glsl  shape.vert  surface.frag  surface.inc  surface.inc.glsl  terrain.frag  terrain.glsl  terrain.vert  terrain_mip.glsl  terrain_ray.glsl  terrain_ray_old.glsl  terrain_tess.glsl  transform.vert
data/shader/physics/: body_gather.glsl  body_push.glsl  body_step.glsl  collision.inc.glsl  collision_add.glsl  collision_clear.glsl
data/shader/terrain/: mip.glsl  ray.glsl  ray_mip.glsl  ray_old.glsl  scatter.glsl  scatter_clear.glsl  scatter_copy.glsl  slice.glsl
doc/: rfc-sounds.md
docs/: CNAME  _config.yml  blog.md  index.html  index.md
docs/_includes/: site-header.html
docs/_layouts/: default.html  home.html  post.html
docs/_posts/: 2019-12-12-data-formats.md  2019-12-17-collision-model.md  2019-12-19-gpu-collisions.md  2020-08-04-shadows.md  2020-08-29-bar-painting.md  2021-08-25-pure-rust.md  2022-11-08-voxels.md
docs/other/: meshopt.md
etc/graphs/: gpu-collision.drawio  physics.drawio
lib/ffi/: Cargo.toml
lib/ffi/src/: lib.rs
lib/m3d/: Cargo.toml
lib/m3d/src/: geometry.rs  lib.rs
lib/net/: Cargo.toml
lib/net/src/: lib.rs  protocol.rs
lib/rle/: Cargo.toml
lib/rle/src/: lib.rs
lib/splay/: Cargo.toml
lib/splay/benches/: level.rs
lib/splay/src/: lib.rs
lib/tiff/: Cargo.toml
lib/tiff/src/: lib.rs
lib/vot/: Cargo.toml
lib/vot/src/: lib.rs
res/: ffi-config.ron
res/ffi/: config.ron  geometry.ron  objects.pal  render-compat.ron  render-full.ron
res/shader/: body.inc.wgsl  color.inc.glsl  color.inc.wgsl  debug.glsl  debug.wgsl  debug_shape.glsl  globals.inc.glsl  globals.inc.wgsl  morton.inc.wgsl  object.glsl  object.wgsl  quat.inc.wgsl  shadow.inc.glsl  shadow.inc.wgsl  surface.inc.glsl  surface.inc.wgsl  water.wgsl
res/shader/physics/: body_step.glsl  collision.inc.glsl  collision_add.glsl  pulse.inc.glsl
res/shader/terrain/: color.inc.wgsl  locals.inc.glsl  locals.inc.wgsl  mesh.wgsl  mip.wgsl  paint.glsl  paint.wgsl  ray.glsl  ray.wgsl  ray_mip.glsl  scatter.glsl  scatter.wgsl  slice.glsl  slice.wgsl  tess.glsl  voxel-bake.wgsl  voxel-draw.wgsl  voxel.inc.wgsl
snapshots/ray-bench/: PERF.md  baseline-30.json  baseline-60.json  baseline-90.json  improved-30.json  improved-60.json  improved-90.json
snapshots/voxel-bench/: PERF.md  baseline-30.json  baseline-60.json  baseline-90.json  c1-fix-30.json  c1-fix-60.json  c1-fix-90.json  c2-fix-30.json  c2-fix-60.json  c2-fix-90.json  c4-fix-30.json  c4-fix-60.json  c4-fix-90.json  voxel-shadow-30.json  voxel-shadow-60.json  voxel-shadow-90.json
src/: app.rs  config.rs  data.rs  freelist.rs  level.rs  lib.rs  main.rs  model.rs  render.rs  space.rs  splay.rs  vfs.rs
src/app/: car.rs  game.rs  mod.rs  view.rs
src/config/: bunches.rs  car.rs  cars.rs  common.rs  escaves.rs  game.rs  mod.rs  settings.rs  text.rs  worlds.rs
src/level/: config.rs  mod.rs  splay.rs
src/physics/: mod.rs  rigid.rs  terrain.rs
src/render/: body.rs  collision.rs  debug.rs  global.rs  mipmap.rs  mod.rs  object.rs  shadow.rs  store.rs  terrain.rs  water.rs
src/render/terrain/: mod.rs  pipeline.rs  types.rs
tests/: net_physics.rs  settings.rs  shaders.rs
tools/: bench-ray.sh  bench-voxel.sh  pack-data.py
web/: build.sh  index.html  tailwind.config.js
