[package]
name = "vangers"
version = "0.3.0"
authors = ["kvark"]
edition = "2021"
resolver = "2"
default-run = "road"
publish = false

[workspace]
members = [
    "lib/ffi",
    "lib/m3d",
    "lib/splay",
    "lib/tiff",
]

[lib]

[features]
default = []
profile = ["profiling/profile-with-tracy"]

[profile.release]
panic = "abort"

[[bin]]
name = "road"
path = "bin/road/main.rs"

[[bin]]
name = "model"
path = "bin/model/main.rs"

[[bin]]
name = "level"
path = "bin/level/main.rs"

[[bin]]
name = "convert"
path = "bin/convert/main.rs"

[dependencies]
# internals
m3d = { path = "lib/m3d" }
splay = { path = "lib/splay" }
tiff = { path = "lib/tiff" }
# library
bytemuck = "1"
byteorder = "1.0"
cgmath = { version = "0.18", features = ["rand"] }
futures = "0.3"
fnv = "1"
log = "0.4"
progress = "0.2"
rand = "0.8"
rayon = "1"
ron = "0.8"
rust-ini = "0.19"
serde = "1.0"
serde_derive = "1.0"
serde_scan = "0.4"
# keep in sync with `lib/ffi/Cargo.toml`
wgpu = { version = "0.17", features = [] }
# binaries
env_logger = "0.10"
getopts = "0.2"
obj = "0.10"
png = "0.17"
winit = "0.28"
# gui
egui = "0.22"
egui_winit_platform = "0.19"
#egui_wgpu_backend = "0.24"
egui_wgpu_backend = { git = "https://github.com/kvark/egui_wgpu_backend", branch = "wgpu-0.17" }

[dev-dependencies]
naga = { version = "0.13", features = ["wgsl-in", "validate"] }

[dependencies.profiling]
version = "1.0.1"
default-features = false

[patch."https://github.com/gfx-rs/wgpu"]
#wgpu = { path = "../wgpu/wgpu" }
#wgpu-hal = { path = "../wgpu/wgpu-hal" }
#wgpu-core = { path = "../wgpu/wgpu-core" }
#wgpu-types = { path = "../wgpu/wgpu-types" }

[patch."https://github.com/gfx-rs/naga"]
#naga = { path = "../naga" }
