[package]
name = "vangers"
version = "0.3.0"
authors = ["kvark"]
edition = "2021"
resolver = "2"
default-run = "road"
publish = false

[workspace]
members = [
    "lib/ffi",
    "lib/m3d",
    "lib/splay",
    "lib/tiff",
]

[lib]

[features]
default = []
profile = ["profiling/profile-with-tracy"]

[profile.release]
panic = "abort"

[[bin]]
name = "road"
path = "bin/road/main.rs"

[[bin]]
name = "model"
path = "bin/model/main.rs"

[[bin]]
name = "level"
path = "bin/level/main.rs"

[[bin]]
name = "convert"
path = "bin/convert/main.rs"

[dependencies]
# internals
m3d = { path = "lib/m3d" }
splay = { path = "lib/splay" }
tiff = { path = "lib/tiff" }
# library
bytemuck = "1"
byteorder = "1.0"
cgmath = { version = "0.18", features = ["rand"] }
futures = "0.3"
fnv = "1"
log = "0.4"
pollster = "0.4"
progress = "0.2"
rand = "0.8"
rayon = "1"
ron = "0.12"
rust-ini = "0.21"
serde = "1.0"
serde_derive = "1.0"
serde_scan = "0.4"
# keep in sync with `lib/ffi/Cargo.toml`
wgpu = "29"
# binaries
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
obj = "0.10"
png = "0.18"
winit = "0.30"
# gui
egui = "0.34"
egui_plot = "0.35"
egui-winit = "0.34"
egui-wgpu = { version = "0.34", default-features = false }

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }

[dependencies.profiling]
version = "1.0"
default-features = false
