[package]
name = "vangers"
version = "0.3.0"
authors = ["kvark"]
edition = "2021"
resolver = "2"
default-run = "road"
publish = false

[workspace]
members = [
    "bin/server",
    "lib/ffi",
    "lib/m3d",
    "lib/net",
    "lib/splay",
    "lib/tiff",
]

[lib]

[features]
default = []
profile = ["profiling/profile-with-tracy"]
web = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "console_log", "console_error_panic_hook", "getrandom", "getrandom_02", "dep:web-time"]

[profile.release]
panic = "abort"

[[bin]]
name = "road"
path = "bin/road/main.rs"

[[bin]]
name = "model"
path = "bin/model/main.rs"

[[bin]]
name = "level"
path = "bin/level/main.rs"

[[bin]]
name = "convert"
path = "bin/convert/main.rs"

[[bin]]
name = "web"
path = "bin/web/main.rs"
required-features = ["web"]

[dependencies]
# internals
m3d = { path = "lib/m3d" }
splay = { path = "lib/splay" }
tiff = { path = "lib/tiff" }
# library
bytemuck = "1"
byteorder = "1.0"
glam = "0.29"
fnv = "1"
log = "0.4"
pollster = "0.4"
progress = "0.2"
rand = "0.8"
rayon = "1"
ron = "0.12"
rust-ini = "0.21"
serde = "1.0"
serde_derive = "1.0"
serde_scan = "0.4"
# keep in sync with `lib/ffi/Cargo.toml`
wgpu = "29"
# binaries
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
obj = "0.10"
png = "0.18"
winit = "0.30"
# gui
egui = "0.34"
egui_plot = "0.35"
egui-winit = { version = "0.34", default-features = false, features = ["links", "wayland", "x11"] }
egui-wgpu = { version = "0.34", default-features = false }
# web
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom_02 = { package = "getrandom", version = "0.2", optional = true, features = ["js"] }
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }
web-time = { version = "1", optional = true }

[dev-dependencies]
naga = { version = "29", features = ["wgsl-in"] }

[dependencies.profiling]
version = "1.0"
default-features = false
