[package]
name = "rusty-vangers"
version = "0.1.0"
workspace = "../.."
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
vangers = { path = "../.." }
m3d = { path = "../m3d" }
log = "0.4"
env_logger = { version = "0.9", optional = true }
futures = "0.3"
cgmath = "0.18"
ron = "0.6"
slotmap = "1"
wgpu = { version = "0.13", features = ["angle"] }
hal = { package = "wgpu-hal", version = "0.13", features = ["gles"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { version = "0.11", optional = true }
log = "0.4"
log-panics = { version = "2" }
